--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </span>
                 </h1>
                 <div class="header__info--text ">
-                    <h4 class="fw--normal header__info--h2">Hi There</h4>
+                    <h4 class="fw--normal header__info--h2">Hi there!</h4>
                     <h2 class="fw--semibold header__info--h1 ">I’m Danielis Flores</h2>
                     <h3 class="fw--normal bubble__title fcolor--principal">Graphic Designer</h3>
                     <h3 class="fw--med header__info--description text-left">
@@ -182,7 +182,7 @@
     <section class="services">
         <div class="services__title">
             <h2>services</h2>
-            <h3>i can offer you</h3>
+            <h3>I can offer you</h3>
         </div>
         <div class="services__container--cards">
             <div class="card">
@@ -478,7 +478,7 @@
         </div>
         <div class="footer__container--contact">
             <div class="navbar__container--logo" >
-                <img class="navbar__logo"   src="./img/logo-gris.png" alt="Logo">
+                <img class="footer__logo"   src="./img/logo-gris.png" alt="Logo">
                 <h3 class="fw--light">Danielis Flores</h3>
             </div>
             <div class="navbar__social">
