--- a/project-detail.html
+++ b/project-detail.html
@@ -34,13 +34,10 @@
                 <h1 class="sidebar__title" id="project-title"></h1>
                         <ul class="sidebar__categories" id="project-categories">
                         </ul>
-                        <!-- <a  id="project-pdf">
-                            <img src="./img/svg/full-project.svg" alt="resume-spinner" class="projects__svg">
-                        </a>                        -->
                 <div class="sidebar__description" id="project-description">
                 </div>
-                <div class="sidebar__logo">
-                    <img class="navbar__logo" id="project-image" src="./img/logo-gris.png" alt="Logo-Danielis">
+                <div class="sidebar__container--logo">
+                    <img class="sidebar__logo" id="project-image" src="./img/logo_blanco.png" alt="Logo-Danielis">
                     <p>Danielis Flores</p>
 
                 </div>
