--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <div class="navbar__social">
                 <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-behance"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in" ></i></a>
+                <a href="#"><i class="fab fa-behance" ></i></a>
             </div>
         </div>
     </nav>
