responsive index completed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio Danielis</title>
+    <title>Danielis Flores</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -352,8 +352,8 @@
     </section>
     <section  class="projects__mobile">
         <div class="projects__mobile__container">
-            <div class="projects__title">
-                <h2 class="projects__title--info">
+            <div class="projects__mobile__title">
+                <h2 class="projects__mobile__title--info">
                     <span>
                         Pro
                     </span>
