--- a/project-detail.html
+++ b/project-detail.html
@@ -13,7 +13,7 @@
             <div class="navbar__menu--toggle">
                 <i class="fas fa-bars"></i>
             </div>
-            <img class="navbar__logo" src="./img/Logo_DF.png" alt="Logo_DF">
+            <img class="navbar__logo" src="./img/Logo_DF.png" alt="Logo_DF" loading="lazy">
             <h4>Danielis Flores</h4>
         </div>
         <div class="navbar__container--links">
@@ -37,7 +37,7 @@
                 <div class="sidebar__description" id="project-description">
                 </div>
                 <div class="sidebar__container--logo">
-                    <img class="sidebar__logo" id="project-image" src="./img/logo_blanco.png" alt="Logo-Danielis">
+                    <img class="sidebar__logo" id="project-image" src="./img/logo_blanco.png" alt="Logo-Danielis" loading="lazy">
                     <p>Danielis Flores</p>
 
                 </div>
@@ -48,7 +48,7 @@
                 </button>
             </div>
             <div class="project__detail--image">
-                <img id="project-image-detail"  alt="Project banner">
+                <img id="project-image-detail"  alt="Project banner" loading="lazy">
             </div>
             
 
