new projects vigil in process

--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
                 <a class="projects--card" data-category="branding">
                     <img src="./img/projects/DELOVERY.jpg" loading="lazy" />
                 </a>
-                <a class=" projects--card" data-category="branding">
+                <a class=" projects--card" data-category="branding" data-id="7">
                     <img src="./img/projects/E.SHAW.jpg" />
                 </a>
                 <a class=" projects--card" data-category="media,branding" >
                     <img src="./img/projects/FORTALEZA.jpg" loading="lazy" />
                 </a>
-                <a class=" projects--card" data-category="branding">
+                <a class=" projects--card" data-category="branding" data-id="6">
                     <img src="./img/projects/LABWEB.jpg" loading="lazy" />
                 </a>
                 <a class=" projects--card" data-category="branding">
@@ -311,7 +311,7 @@
                 <a class=" projects--card" data-category="branding">
                     <img src="./img/projects/PEPONA.jpg" loading="lazy" />
                 </a>
-                <a class=" projects--card" data-category="branding">
+                <a class=" projects--card" data-category="branding" data-id="8">
                     <img src="./img/projects/GALAXY GYM.jpg" loading="lazy" />
                 </a>
                 <a class=" projects--card" data-category="branding">
@@ -326,7 +326,7 @@
                 <a class=" projects--card" data-category="branding">
                     <img src="./img/projects/CORRALON_PATAGONICO.jpg" loading="lazy" />
                 </a>
-                <a class=" projects--card" data-category="branding">
+                <a class=" projects--card" data-category="branding" data-id="9">
                     <img src="./img/projects/CHRISTIAN.jpg" loading="lazy" />
                 </a>
                 <a class=" projects--card" data-category="branding">
@@ -418,13 +418,13 @@
             <a class="projects--card" data-category="branding">
                 <img src="./img/projects/DELOVERY.jpg" loading="lazy" />
             </a>
-            <a class=" projects--card" data-category="branding">
+            <a class=" projects--card" data-category="branding" data-id="7">
                 <img src="./img/projects/E.SHAW.jpg" loading="lazy" />
             </a>
             <a class=" projects--card" data-category="media,branding" >
                 <img src="./img/projects/FORTALEZA.jpg" loading="lazy" />
             </a>
-            <a class=" projects--card" data-category="branding">
+            <a class=" projects--card" data-category="branding" data-id="6">
                 <img src="./img/projects/LABWEB.jpg" />
             </a>
             <a class=" projects--card" data-category="branding">
@@ -436,7 +436,7 @@
             <a class=" projects--card" data-category="branding">
                 <img src="./img/projects/PEPONA.jpg"  loading="lazy"/>
             </a>
-            <a class=" projects--card" data-category="branding">
+            <a class=" projects--card" data-category="branding" data-id="8">
                 <img src="./img/projects/GALAXY GYM.jpg" loading="lazy" />
             </a>
             <a class=" projects--card" data-category="branding">
@@ -451,7 +451,7 @@
             <a class=" projects--card" data-category="branding">
                 <img src="./img/projects/CORRALON_PATAGONICO.jpg" loading="lazy" />
             </a>
-            <a class=" projects--card" data-category="branding">
+            <a class=" projects--card" data-category="branding" data-id="9">
                 <img src="./img/projects/CHRISTIAN.jpg" loading="lazy" />
             </a>
             <a class=" projects--card" data-category="branding">
