--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <a class=" projects--card" data-category="media">
                     <img src="./img/projects/QUENTO.jpg" loading="lazy" />
                 </a>
-                <a class=" projects--card" data-category="design">
+                <a class=" projects--card" data-category="design" href="">
                     <img src="./img/projects/VIGIL PAPELERIA.jpg" loading="lazy" />
                 </a>
                 <a class=" projects--card" data-category="media">
@@ -302,7 +302,7 @@
                 <a class=" projects--card" data-category="branding" data-id="6">
                     <img src="./img/projects/LABWEB.jpg" loading="lazy" />
                 </a>
-                <a class=" projects--card" data-category="branding">
+                <a class=" projects--card" data-category="branding" href="project-vigil.html">
                     <img src="./img/projects/VIGIL.jpg" loading="lazy" />
                 </a>
                 <a class=" projects--card" data-category="branding">
@@ -427,7 +427,7 @@
             <a class=" projects--card" data-category="branding" data-id="6">
                 <img src="./img/projects/LABWEB.jpg" />
             </a>
-            <a class=" projects--card" data-category="branding">
+            <a class=" projects--card" data-category="branding" href="project-vigil.html">
                 <img src="./img/projects/VIGIL.jpg" loading="lazy" />
             </a>
             <a class=" projects--card" data-category="branding">
