--- a/project-vigil.html
+++ b/project-vigil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="overflow: hidden;">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <nav class="navbar size">
+    <nav class="navbar navbar--vigil size">
         <div class="navbar__container--logo">
             <div class="navbar__menu--toggle">
                 <i class="fas fa-bars"></i>
@@ -29,7 +29,7 @@
             </div>
         </div>
     </nav>
-    <main class="project__detail">
+    <main class="project__detail--vigil">
         <div class="sidebar">
             <h1 class="sidebar__title" id="project-title">Vigil Wine Club</h1>
             <ul class="sidebar__categories" id="project-categories">
@@ -50,7 +50,7 @@
         </div>
         <div class="project__detail--content">
             <section class="content__section">
-                <img id="image-1" src="/img/projects-details/vigil/1-vigil.jpg" alt="Image 1" class="content__image" loading="lazy">
+                <img id="image-1" src="img/projects-details/vigil/1-vigil.jpg" alt="Image 1" class="content__image" loading="lazy">
             </section>
             <section class="content__section">
                 <video id="video-1" class="content__video" loop autoplay muted>
@@ -62,11 +62,12 @@
                 <img id="image-2" src="/img/projects-details/vigil/3-vigil.jpg" alt="Image 2" class="content__image" loading="lazy">
             </section>
             <section class="content__section">
-                <video id="video-2" class="content__video" loop autoplay muyted>
+                <video id="video-2" class="content__video" loop autoplay muted>
                     <source src="/img/projects-details/vigil/4-vigil.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </section>
+
         </div>
     </main>
 </body>
