--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
             <div class="navbar__menu--toggle">
                 <i class="fas fa-bars"></i>
             </div>
-            <img class="navbar__logo" src="./img/Logo_DF.png" alt="Logo_DF" loading="lazy">
-            <h4>Danielis Flores</h4>
+            <a href="index.html" class="flex-row link__nav">
+                <img class="navbar__logo" src="./img/Logo_DF.png" alt="Logo_DF" loading="lazy">
+                <h4>Danielis Flores</h4>
+            </a>
         </div>
         <div class="navbar__container--links">
             <div class="navbar__links">
@@ -281,10 +283,10 @@
                 <a class=" projects--card" data-category="media">
                     <img src="./img/projects/VIGIL RRSS.jpg" loading="lazy" />
                 </a>
-                <a class=" projects--card" data-category="media">
+                <a class=" projects--card" data-category="media,design" data-id="10">
                     <img src="./img/projects/VINICOLA MDZ.jpg" loading="lazy" />
                 </a>
-                <a class=" projects--card" data-category="media">
+                <a class=" projects--card" data-category="media,design" href="project-lvba.html">
                     <img src="./img/projects/VINICOLA.jpg" loading="lazy" />
                 </a>
                 <a class="projects--card" data-category="media,branding">
@@ -406,10 +408,10 @@
             <a class=" projects--card" data-category="media">
                 <img src="./img/projects/VIGIL RRSS.jpg" loading="lazy" />
             </a>
-            <a class=" projects--card" data-category="media">
+            <a class=" projects--card" data-category="media,design" data-id="10">
                 <img src="./img/projects/VINICOLA MDZ.jpg" loading="lazy" />
             </a>
-            <a class=" projects--card" data-category="media">
+            <a class=" projects--card" data-category="media,design" href="project-lvba.html">
                 <img src="./img/projects/VINICOLA.jpg" loading="lazy" />
             </a>
             <a class="projects--card" data-category="media,branding">
