--- a/project-detail.html
+++ b/project-detail.html
@@ -13,8 +13,11 @@
             <div class="navbar__menu--toggle">
                 <i class="fas fa-bars"></i>
             </div>
-            <img class="navbar__logo" src="./img/Logo_DF.png" alt="Logo_DF" loading="lazy">
-            <h4>Danielis Flores</h4>
+            <a href="index.html" class="flex-row link__nav">
+                <img class="navbar__logo" src="./img/Logo_DF.png" alt="Logo_DF" loading="lazy">
+                <h4>Danielis Flores</h4>
+
+            </a>
         </div>
         <div class="navbar__container--links">
             <div class="navbar__links">
@@ -24,7 +27,7 @@
             </div>
             <div class="navbar__social">
                 <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-linkedin" ></i></a>
+                <a href="#"><i class="fab fa-linkedin-in" ></i></a>
                 <a href="#"><i class="fab fa-behance" ></i></a>
             </div>
         </div>
