--- a/project-lvba.html
+++ b/project-lvba.html
@@ -49,17 +49,17 @@
                 </a>
             </button>
         </div>
-        <div class="project__detail--content">
-            <section class="content__section">
+        <div class="project__detail--lvba">
+            <section class="content__section--lvba">
                 <img id="image-1" src="img/projects-details/lvba/1lvba.jpg" alt="Image 1 Vinicola" class="content__image" loading="lazy">
             </section>
-            <section class="content__section">
+            <section class="content__section--lvba">
                 <video id="video-1" class="content__video" loop autoplay muted>
                     <source src="img/projects-details/lvba/2lvba.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </section>
-            <section class="content__section">
+            <section class="content__section--lvba">
                 <img id="image-2" src="/img/projects-details/lvba/3lvba.jpg" alt="Image 2 Vinicola" class="content__image" loading="lazy">
             </section>
 
