--- a/project-lvba.html
+++ b/project-lvba.html
@@ -54,7 +54,7 @@
                 <img id="image-1" src="img/projects-details/lvba/1lvba.jpg" alt="Image 1 Vinicola" class="content__image" loading="lazy">
             </section>
             <section class="content__section--lvba">
-                <video id="video-1" class="content__video" loop autoplay muted>
+                <video id="video-1" class="content__video--lvba" loop autoplay muted>
                     <source src="img/projects-details/lvba/2lvba.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
