--- a/project-avant.html
+++ b/project-avant.html
@@ -37,7 +37,12 @@
             <ul class="sidebar__categories" id="project-categories">          
                 <li class="flex-row"><span class="color__form"></span>Social Media</li>       
             </ul>
-            <div class="sidebar__description" id="project-description">Advertising campaign aimed at Copa América 2024 for a renowned wine brand from Argentina, with the goal of increasing the Vigil Wine Club community, fostering interaction and engagement with the audience, boosting wine sales during Copa América, and establishing a membership club to build consumer loyalty.</div>
+            <div class="sidebar__description" id="project-description">Social Media Design for Avant Motos, the official Honda Motorcycle dealer in Argentina. We offer spare parts, brand-new motorcycles, and cater to customers’ needs in track bikes, street bikes, enduro, cross, custom, scooters, and mopeds.
+
+            Avant Motos features an official Honda 4-Wings after-sales service, which guarantees purchasers expert advice, specialized labor, and original spare parts.
+                
+            In addition, we have our own motocross team, Avant Motos Honda Genuine Oil.
+                </div>
             <div class="sidebar__container--logo">
                 <img class="sidebar__logo" id="project-image" src="./img/logo_blanco.png" alt="Logo-Danielis" loading="lazy">
                 <p>Danielis Flores</p>
@@ -52,20 +57,20 @@
             <section class="content__section--avant">
                 <img id="image-1" src="img/projects-details/avant/avant-1.jpg" alt="Image 1 Avant" class="content__image--avant" loading="lazy">
             </section>
-            <section class="content__section">
-                <video id="video-1" class="content__video" loop autoplay muted>
+            <section class="content__section--avant">
+                <video id="video-1" class="content__video--avant" loop autoplay muted>
                     <source src="img/projects-details/avant/avant-2.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </section>
-            <section class="content__section">
-                <video id="video-2" class="content__video" loop autoplay muted>
+            <section class="content__section--avant">
+                <video id="video-2" class="content__video--avant" loop autoplay muted>
                     <source src="/img/projects-details/avant/avant-3.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </section>           
-            <section class="content__section">
-                <img id="image-2" src="/img/projects-details/avant/avant-4.jpg" alt="Image 2 Avant" class="content__image" loading="lazy">
+            <section class="content__section--avant">
+                <img id="image-2" src="/img/projects-details/avant/avant-4.jpg" alt="Image 2 Avant" class="content__image--avant" loading="lazy">
             </section>
         </div>
     </main>
