--- a/project-detail.html
+++ b/project-detail.html
@@ -26,9 +26,9 @@
                 <a href="index.html#projects">Projects</a>
             </div>
             <div class="navbar__social">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in" ></i></a>
-                <a href="#"><i class="fab fa-behance" ></i></a>
+                <a href="https://www.instagram.com/danielis.design/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/danielisflores/"><i class="fab fa-linkedin-in" ></i></a>
+                <a href="https://www.behance.net/DanielisFlores"><i class="fab fa-behance" ></i></a>
             </div>
         </div>
     </nav>
